# chess

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  MODULE.bazel  README.md  bishop_trainer.cc  blindfold.cc  chess_board.cc  chess_board.h  compile_commands.json  memory.cc  term_utils.cc  term_utils.h
problems/: polgar_mate_in_ones.json  polgar_mate_in_threes.json  polgar_mate_in_twos.json
