module(name = "guille_industries")

bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "nlohmann_json", version = "3.11.3")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "f5fbd4cee671d8d908f37c83abaf70fba5928fc7",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).

    # TODO: This is pointing to https://github.com/hedronvision/bazel-compile-commands-extractor/pull/219
    # because right now the main branch is broken, and that PR fixes it (and hasn't been merged).
    # See https://github.com/hedronvision/bazel-compile-commands-extractor/issues/199
)

bazel_dep(name = "bazel_clang_tidy", dev_dependency = True)
git_override(
    module_name = "bazel_clang_tidy",
    remote = "https://github.com/erenon/bazel_clang_tidy",
    commit = "a01e5e262e6d604c21ed11c420a2a245397b995a",
)
